# ms_rewards_bot

./: .gitignore  Dockerfile  README.md  RewardsBot.sh  pyproject.toml
src/: main.py
