[tool.poetry]
name = "ms_rewards_bot"
version = "0.1.0"
description = ""
authors = ["Nils Rother <NilsRother123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^3.141.0"
nltk = "^3.6.3"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
